<resources>
    <string name="app_name">Travel Application</string>
    <string name="let_s_enjoy_the_nbeautiful_world">Let\'s Enjoy The \nBeautiful World</string>
    <string name="explore_new_places_in_the_world_n_and_get_new_expriences">Explore new places in the world\n and get new expriences</string>
    <string name="get_started">Get Started</string>
    <string name="discover_the_best_place_to_travel">Discover the Best place To Travel</string>
    <string name="welcome_back">Welcome back</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="search_location">Search Location...</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="category">Category</string>
</resources>