<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical"
                android:padding="@dimen/spacing_16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8dp"
                        android:layout_marginTop="@dimen/spacing_8dp"
                        android:text="@string/welcome_back"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_profile"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8dp"
                        android:text="@string/tony_stark"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_28sp"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                        app:layout_constraintStart_toEndOf="@+id/iv_profile"
                        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_8dp"
                        android:src="@drawable/bell"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/iv_profile" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/spacing_8dp"
                    android:text="@string/discover_the_best_place_to_travel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_28sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16dp"
                    android:layout_marginBottom="@dimen/spacing_8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/search_background"
                        android:drawableStart="@drawable/search_icon"
                        android:drawablePadding="@dimen/spacing_16dp"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/search_location"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/spacing_16dp"
                        android:paddingVertical="@dimen/spacing_8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/text_16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16dp"
                        android:background="@drawable/setting_background"
                        android:padding="@dimen/spacing_8dp"
                        android:src="@drawable/settings" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_8dp"
                android:layout_marginTop="@dimen/spacing_8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_8dp"
                android:clipToPadding="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_8dp"
                android:layout_marginTop="@dimen/spacing_8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_8dp"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/spacing_32dp" />

        </LinearLayout>

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_100dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_60dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            app:contentInsetStart="0dp"
            app:fabCradleMargin="@dimen/spacing_8dp"
            app:fabCradleRoundedCornerRadius="@dimen/spacing_50dp"
            app:fabCradleVerticalOffset="@dimen/spacing_6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_20dp"
                        android:layout_height="@dimen/spacing_20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bottom_btn1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_20dp"
                        android:layout_height="@dimen/spacing_20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bottom_btn2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_20dp"
                        android:layout_height="@dimen/spacing_20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bottom_btn3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_20dp"
                        android:layout_height="@dimen/spacing_20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bottom_btn4" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:src="@drawable/float_icon"
            android:tint="@color/white"
            app:layout_anchor="@id/app_bar"
            app:maxImageSize="@dimen/spacing_30dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


